2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Autotools.mdp: All projects now require fx 3.5.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileData.cs:
	* SimpleProjectMakefileHandler.cs: Track API changes.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Autotools.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileOptionPanelWidget.cs: Avoid asking for creating makefiles when
	switching pages.

2008-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands.cs:
	* MakefileOptionPanelWidget.cs: When enabling makefile integration, if
	no makefiles are found in the project directory, show a message
	offering generating them.

2008-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileProjectServiceExtension.cs: Allow executing when a makefile
	execution target is defined.

	* Makefile.am: Fix parallel build issues.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Autotools.addin.xml: Bump MD version.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* SimpleProjectMakefileHandler.cs: Fix naming of satellite assemblies.
	Base name must be the name of the original assembly, not the default
	namespace. 

	* MakefileProjectServiceExtension.cs: Include referenced configure.in
	file in the item's list.

	* MakefileData.cs: Fix string formatting.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Autotools.addin.xml, FileNodeBuilderExtension.cs: Added
	  quick property for enabling inclusion in makefiles synching.
	  Supports multi-select.
	* SimpleProjectMakefileHandler.cs, MakefileData.cs: Track API.

2008-09-29  Lluis Sanchez Gual <lluis@novell.com> 
