@@ -1,3 +1,7 @@
+2009-01-14  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* MakefileData.cs: Add vala error regexes.
+
 2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Autotools.mdp: All projects now require fx 3.5.
